<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>ch.vd.bpm.tools</groupId>
        <artifactId>bonita-build-tools</artifactId>
        <version>2.1.0-bonita-7.15.4</version>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.vd.fiscalite.dperm.process</groupId>
    <artifactId>process-release-PM</artifactId>
    <version>24.3.1.2-SNAPSHOT</version>

    <packaging>pom</packaging>

    <dependencies>
        <dependency>
            <groupId>ch.vd.bpm.dperm.test</groupId>
            <artifactId>dperm-bonita-toolbox</artifactId>
            <version>7.15.4-vd-01-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sun.xml.bind</groupId>
                    <artifactId>jaxb-impl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk14</artifactId>
            <version>1.7.30</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <properties>
        <maven.compiler.target>11</maven.compiler.target>
        <maven.compiler.source>11</maven.compiler.source>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <environment>Integration</environment>
        <test.environnement>local</test.environnement>

        <bonita.commands.elasticsearch.version>2.1.1</bonita.commands.elasticsearch.version>

        <project.workspace.groupId>ch.vd.fiscalite.dperm.bpm</project.workspace.groupId>
        <project.workspace.artifactId>bonita-repository</project.workspace.artifactId>
        <project.workspace.version>24.3.1.2-SNAPSHOT</project.workspace.version>

        <bonita-repository>${project.build.directory}/repo</bonita-repository>
        <bonita.version.licence>41-SNAPSHOT</bonita.version.licence>
        <bonita.home>${project.build.directory}/bonita-home</bonita.home>
    </properties>

    <profiles>
        <profile>
            <id>current-release</id>
            <activation>
                <property>
                    <name>!all</name>
                </property>
            </activation>
            <modules>
                <module>DPerm-REVIFD-Acquisition</module>
                <module>DPerm-ControleAssujetissement</module>
            </modules>
        </profile>
        <profile>
            <id>all</id>
            <activation>
                <property>
                    <name>all</name>
                </property>
            </activation>
            <modules>
                <module>DPerm-TO-BA-PM-DocumentEntrant</module>
                <module>DPerm-TO-BA-PM-Traitement</module>
                <module>DPerm-Indexation</module>
                <module>DPerm-ControleAssujetissement</module>
                <module>DPerm-DI-PM-Acquisition</module>
                <module>DPerm-DI-PM-Traitement</module>
                <module>DPerm-AttributionMetier-PM</module>
                <module>DPerm-DI-PM-Reattribution</module>
                <module>DPerm-DI-PM-DocumentEntrant</module>
                <module>DPerm-TO-DI-PM-Traitement</module>
                <module>DPerm-TO-DI-Traitement</module>
                <module>DPerm-TO-DI-DocumentEntrant</module>
                <module>DPerm-PJ-ECHUE-PM-Traitement</module>
                <module>DPerm-PJ-ECHUE-PM-DocumentEntrant</module>
                <module>DPerm-PJ-PM-Acquisition</module>
                <module>DPerm-PJ-PM-Traitement</module>
                <module>DPerm-PJ-PM-DocumentEntrant</module>
                <module>DPerm-Identification</module>
                <module>DPerm-IndividuIdentifie</module>
                <module>DPerm-RICANT-Acquisition</module>
                <module>DPerm-RICANT-Traitement</module>
                <module>DPerm-RICANT-DocumentEntrant</module>
                <module>DPerm-PCAP-Acquisition</module>
                <module>DPerm-PCAP-Traitement</module>
                <module>DPerm-PCAP-DocumentEntrant</module>
                <module>DPerm-DEM-DEGREV-DocumentEntrant</module>
                <module>DPerm-DEM-DEGREV-Acquisition</module>
                <module>DPerm-DEM-DEGREV-Traitement</module>
                <module>DPerm-EVTS-IMM-Traitement</module>
                <module>DPerm-EVTS-IMM-DocumentEntrant</module>
                <module>DPerm-COORD-FIN-Acquisition</module>
                <module>DPerm-COORD-FIN-Traitement</module>
                <module>DPerm-COORD-FIN-DocumentEntrant</module>
                <module>DPerm-COORD-FIN-ECHUE-DocumentEntrant</module>
                <module>DPerm-COORD-FIN-ECHUE-Traitement</module>
                <module>DPerm-EVTS-ICI-IFONC-BATCH-DocumentEntrant</module>
                <module>DPerm-EVTS-ICI-IFONC-BATCH-Traitement</module>
                <module>DPerm-SNC-Acquisition</module>
                <module>DPerm-SNC-Traitement</module>
                <module>DPerm-SNC-DocumentEntrant</module>
                <module>DPerm-PLANREC-DocumentEntrant</module>
                <module>DPerm-PLANREC-Acquisition</module>
                <module>DPerm-PLANREC-Traitement</module>
                <module>DPerm-TO-QUEST-SNC-DocumentEntrant</module>
                <module>DPerm-TO-QUEST-SNC-Traitement</module>
                <module>DPerm-EVTS-SNC-DocumentEntrant</module>
                <module>DPerm-EVTS-SNC-Traitement</module>
                <module>DPerm-EVTS-REGISTRE-DocumentEntrant</module>
                <module>DPerm-EVTS-REGISTRE-Traitement</module>
                <module>DPerm-ACO-PM-Acquisition</module>
                <module>DPerm-ACO-PM-Traitement</module>
                <module>DPerm-ACO-PM-DocumentEntrant</module>
                <module>DPerm-EVTS-REEXAMEN-DocumentEntrant</module>
                <module>DPerm-EVTS-REEXAMEN-Traitement</module>
                <module>DPerm-EVTS-REEXAMEN-AttributionMetier</module>
                <module>DPerm-EVTS-REEXAMEN-Reattribution</module>
                <module>DPerm-DEM-DELAI-DocumentEntrant</module>
                <module>DPerm-DEM-DELAI-Acquisition</module>
                <module>DPerm-ControleDebiteurIS</module>
                <module>DPerm-LTN-DocumentEntrant</module>
                <module>DPerm-LTN-Acquisition</module>
                <module>DPerm-LTN-Traitement</module>
                <module>DPerm-AVIS-DEPART-DocumentEntrant</module>
                <module>DPerm-AVIS-DEPART-Acquisition</module>
                <module>DPerm-AVIS-DEPART-Traitement</module>
                <module>DPerm-EVTS-REPIFD-DocumentEntrant</module>
                <module>DPerm-EVTS-REPIFD-Traitement</module>
                <module>DPerm-DECL-EMP-DocumentEntrant</module>
                <module>DPerm-DECL-EMP-Acquisition</module>
                <module>DPerm-DECL-EMP-Traitement</module>
                <module>DPerm-REVIFD-DocumentEntrant</module>
                <module>DPerm-REVIFD-Acquisition</module>
                <module>DPerm-REVIFD-Traitement</module>
                <module>DPerm-IIES-PM-DocumentEntrant</module>
                <module>DPerm-IIES-PM-Acquisition</module>
                <module>DPerm-IIES-PM-Traitement</module>
                <module>DPerm-EVTS-LISTE-IS-DocumentEntrant</module>
                <module>DPerm-EVTS-LISTE-IS-Traitement</module>
                <module>DPerm-EVTS-TAXATION-IS-DocumentEntrant</module>
                <module>DPerm-EVTS-TAXATION-IS-Traitement</module>
                <module>DPerm-ESTIMATION-BVTAX-DocumentEntrant</module>
                <module>DPerm-ESTIMATION-BVTAX-Acquisition</module>
                <module>DPerm-FermetureTachesActives</module>
                <module>DPerm-ARF-DocumentEntrant</module>
                <module>DPerm-ARF-Acquisition</module>
                <module>DPerm-ARF-Traitement</module>
                <module>DPerm-TAXATION-GLOBE-DocumentEntrant</module>
                <module>DPerm-TAXATION-GLOBE-Acquisition</module>
                <module>DPerm-TAXATION-GLOBE-Traitement</module>
            </modules>
        </profile>
        <profile>
            <id>bar</id>
            <activation>
                <property>
                    <name>!skipBAR</name>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <inherited>false</inherited>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <executions>
                            <execution>
                                <phase>compile</phase>
                                <id>buildBonitaBusinessArchive</id>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>2.8.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M3</version>
                    <configuration>
                        <argLine>-Xmx512m -XX:MaxPermSize=256m -Dfile.encoding=UTF-8</argLine>
                        <systemPropertyVariables>
                            <sysprop.bonita.db.vendor>h2</sysprop.bonita.db.vendor>
                            <env>${test.environnement}</env>
                            <bonita.home>${bonita.home}</bonita.home>
                            <bonita.client>${bonita.client}</bonita.client>
                        </systemPropertyVariables>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <inherited>false</inherited>
                <groupId>vd.ch.socle.bpm</groupId>
                <artifactId>bonita-maven-plugin</artifactId>
                <version>${bonita.maven.plugin.version}</version>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>find-process-names</goal>
                        </goals>
                        <configuration>
                            <propertyName>processes</propertyName>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>get-bonita-commands</id>
                        <goals>
                            <goal>copy</goal>
                        </goals>
                        <configuration>
                            <artifactItems>
                                <artifactItem>
                                    <groupId>vd.ch.bpm.bonita.elasticsearch</groupId>
                                    <artifactId>bonita-commands-elasticsearch</artifactId>
                                    <version>${bonita.commands.elasticsearch.version}</version>
                                    <type>jar</type>
                                </artifactItem>
                            </artifactItems>
                        </configuration>
                    </execution>
                    <execution>
                        <id>unpackLicenses</id>
                        <phase>generate-test-resources</phase>
                    </execution>
                    <execution>
                        <id>copy-la-builder</id>
                        <phase>generate-resources</phase>
                    </execution>
                    <execution>
                        <id>unpackRepo</id>
                        <phase>generate-sources</phase>
                    </execution>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>generate-test-resources</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <inherited>false</inherited>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.7</version>
                <executions>
                    <execution>
                        <id>copy-resources-config</id>
                        <phase>generate-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${bonita.home}</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/config/dev</directory>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <scm>
        <url>https://dsigit.etat-de-vaud.ch/outils/git/projects/FISC/repos/dperm-process-release-pm/browse</url>
        <connection>scm:git:ssh://git@bitbucket.etat-de-vaud.ch/fisc/dperm-process-release-pm.git</connection>
        <developerConnection>scm:git:ssh://git@bitbucket.etat-de-vaud.ch/fisc/dperm-process-release-pm.git
        </developerConnection>
        <tag>${project.artifactId}-${project.version}</tag>
    </scm>

    <distributionManagement>
        <repository>
            <id>nexus.releases</id>
            <name>Nexus releases</name>
            <url>${nexus.url.releases}</url>
        </repository>
        <snapshotRepository>
            <id>nexus.snapshots</id>
            <name>Nexus snaphots</name>
            <url>${nexus.url.snapshots}</url>
            <uniqueVersion>false</uniqueVersion>
        </snapshotRepository>
    </distributionManagement>

</project>